welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:11: error: not found: value getMondeLargueur
		if (getX() == getMondeLargueur() - 1)
                              ^